--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,11 +1,12 @@
 .banner{
     background:url('/public/Resources/banner2.png') ,
-    linear-gradient(rgb(255, 254, 254),rgb(221, 217, 217));
+    linear-gradient(rgb(248, 247, 247),rgb(221, 217, 217));
     background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;     
+    /* background-attachment: fixed;      */
    background-position: center;
+   
    
 }
 
